--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["fischor <fischor@norep.ly>"]
 license = "todo"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">3.6.2,<4.0"
 protobuf = "^3.17.3"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.9.6"
 Sphinx = "^4.1.2"
 sphinx-rtd-theme = "^0.5.2"
+black = "^21.7b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
