build: do not run poetry shell

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,8 +62,6 @@ jobs:
           poetry config virtualenvs.in-project true
           poetry install --no-interaction
       - name: Run tests
-        run: |
-          poetry shell
-          python -m unittest test.test_protogen
+        run: python -m unittest test.test_protogen
       - name: Build artifacts
         run: poetry build
