--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,10 @@ jobs:
         uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.8
+     - name: Setup protoc
+       uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
       # Perma-cache Poetry since we only need it for checking pyproject version
       - name: Cache Poetry
         id: cache-poetry
