--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,9 @@ jobs:
      - name: Setup protoc
        uses: arduino/setup-protoc@v1
         with:
-          version: '3.x'
+          version: '3.17.3'
+      - name: protoc version
+        run: protoc --version
       # Perma-cache Poetry since we only need it for checking pyproject version
       - name: Cache Poetry
         id: cache-poetry
