--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,11 +29,13 @@ jobs:
         uses: actions/setup-python@v2.2.2
         with:
           python-version: 3.8
+      - name: python --version
+        run: python --version
       - name: Setup protoc
         uses: arduino/setup-protoc@v1
         with:
           version: '3.17.3'
-      - name: protoc version
+      - name: protoc --version
         run: protoc --version
       # Perma-cache Poetry since we only need it for checking pyproject version
       - name: Cache Poetry
@@ -67,6 +69,10 @@ jobs:
         run: |
           poetry config virtualenvs.in-project true
           poetry install --no-interaction
+      - name: Prepare PYTHONPATH
+        run: |
+          export PYTHONPATH=$(pwd)
+          echo $PYTHONPATH
       - name: Run tests
         run: python -m unittest test.test_protogen
       - name: Build artifacts
