--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -1,14 +1,14 @@
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
 
 name: Prepare Release
 
 jobs:
   autorelease:
     name: Prepare Release
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.3.4
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: '3.8'
+          python-version: "3.8"
       - name: python --version
         run: |
           python --version
@@ -25,7 +25,7 @@ jobs:
       - name: Setup protoc
         uses: arduino/setup-protoc@v1
         with:
-          version: '3.17.3'
+          version: "3.17.3"
       - name: protoc --version
         run: protoc --version
       - name: Permacache Poetry
