--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ keywords = [
 ]
 
 [tool.poetry.dependencies]
-python = ">3.6.2,<4.0"
-protobuf = "^3.17.3"
+python = ">=3.7,<4.0"
+protobuf = "^3.20.3"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.9.6"
