test: switch to pytest

--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -68,7 +68,7 @@ jobs:
           poetry config virtualenvs.in-project true
           poetry install --no-interaction
       - name: Run tests
-        run: poetry run python -m unittest test.test_protogen
+        run: poetry run pytest --ignore=samples/ -v
       - name: Build
         run: poetry build
       - name: Release Notes
