--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ Sphinx = "^4.1.2"
 sphinx-rtd-theme = "^0.5.2"
 black = "^21.7b0"
 pydocstyle = "^6.1.1"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
