--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "protogen"
-version = "0.3.0"
+version = "0.3.1"
 description = "protogen makes writing protoc plugins easy."
 authors = ["fischor <fischor.sh@gmail.com>"]
 maintainers = ["fischor <fischor.sh@gmail.com>"]
@@ -18,7 +18,7 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-protobuf = "^3.20.3"
+protobuf = ">=3.20.3"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.9.6"
