--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -11,26 +11,26 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
       - name: Setup Python
-        uses: actions/setup-python@v2.2.2
+        uses: actions/setup-python@v5.6.0
         with:
-          python-version: "3.8"
+          python-version: 3.13
       - name: python --version
         run: |
           python --version
           python3 --version
       - name: Setup protoc
-        uses: arduino/setup-protoc@v1
+        uses: arduino/setup-protoc@v3.0.0
         with:
-          version: "3.17.3"
+          version: "31.1"
       - name: protoc --version
         run: protoc --version
       - name: Permacache Poetry
         id: cache-poetry
-        uses: actions/cache@v2.1.6
+        uses: actions/cache@v4.2.3
         with:
           path: ~/.poetry
           key: poetry
@@ -57,7 +57,7 @@ jobs:
         run: poetry check --no-interaction
       - name: Cache dependencies
         id: cache-deps
-        uses: actions/cache@v2.1.6
+        uses: actions/cache@v4.2.3
         with:
           path: ${{github.workspace}}/.venv
           key: poetry-${{ hashFiles('**/poetry.lock') }}
